--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
     "nuxt": "^3.17.5",
+    "three": "^0.177.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
