--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "my-backend",
+  "name": "cv-sumber-alam-raya-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend API for CV Sumber Alam Raya website",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "node",
+    "express",
+    "postgresql",
+    "api"
+  ],
+  "author": "Your Name/Organization",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "pg": "^8.16.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pg": "^8.11.5"
   }
 }
