Update backend package.json with start script and correct dependencies

--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cv-sumber-alam-raya-backend",
+  "name": "my-backend",
   "version": "1.0.0",
   "description": "Backend API for CV Sumber Alam Raya website",
   "main": "server.js",
